--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12 section-header">
-            <img src="/frontend/images/logo.png" alt="LOGO" />
+            <img src="frontend/images/logo.png" alt="LOGO" />
             <h1>MAGISTER</h1>
             <h1>SEKOLAH TINGGGI PELAYARAN</h1>
           </div>
