--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="frontend/css/bootstrap.css" />
+    <link rel="stylesheet" href="frontend/vendor/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="frontend/css/owl.theme.default.css" />
     <link rel="stylesheet" href="frontend/css/bootstrap-grid.css" />
     <link rel="stylesheet" href="frontend/css/bootstrap-reboot.css" />
     <link rel="stylesheet" href="frontend/css/style.css" />
@@ -19,7 +21,7 @@
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header id="header">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12 section-header">
@@ -86,11 +88,282 @@
     </div>
 
     <!-- navbar -->
+    <!-- corousel -->
+
+    <div class="bd-example">
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <ol class="carousel-indicators">
+          <li
+            data-target="#carouselExampleCaptions"
+            data-slide-to="0"
+            class="active"
+          ></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="/frontend/images/image1.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/frontend/images/image2.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="/frontend/images/image3.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>
+                Praesent commodo cursus magna, vel scelerisque nisl consectetur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+    <!-- Corusel akhir -->
+    <!-- link terkait -->
+    <section class="section-link p-5">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col-12">
+            <h5>LINK TERKAIT</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="owl-carousel">
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image1.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image2.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image3.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image4.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image5.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- link terkait -->
+    <!-- news -->
+    <section class="section-news bg-light p-5">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col-12">
+            <h5>NEWS</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <div class="owl-carousel">
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image1.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image2.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image3.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image4.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+              <div class="figure-img">
+                <img
+                  src="/frontend/images/image5.jpg"
+                  class="figure-img img-fluid"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- NEWS -->
+    <!-- GALERY -->
+    <section class="section-galery p-5">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col-12">
+            <h5>GALERY</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image1.jpg')"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image2.jpg')"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image3.jpg')"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image4.jpg')"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image5.jpg')"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image4.jpg')"
+                ></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- GALERY -->
+    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
     <!-- <script src="frontend/js/jquery-3.5.1.slim.min.js"></script> -->
     <script src="frontend/js/jquery.min.js"></script>
     <script src="frontend/js/popper.min.js"></script>
     <script src="frontend/js/bootstrap.js"></script>
     <script src="frontend/js/main.js"></script>
+    <script src="frontend/vendor/owl/owl.carousel.min.js"></script>
+    <script type="text/javascript">
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: false,
+        autoplay: true,
+        autoplayTimeout: 4000,
+        dotd: false,
+
+        responsive: {
+          0: {
+            items: 2,
+          },
+          600: {
+            items: 3,
+          },
+          1000: {
+            items: 5,
+          },
+          1400: {
+            items: 5,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
