--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="frontend/css/bootstrap.css" />
     <link rel="stylesheet" href="frontend/vendor/owl/owl.carousel.min.css" />
-    <link rel="stylesheet" href="frontend/css/owl.theme.default.css" />
+    <!-- <link rel="stylesheet" href="frontend/css/owl.theme.default.css" /> -->
     <link rel="stylesheet" href="frontend/css/bootstrap-grid.css" />
     <link rel="stylesheet" href="frontend/css/bootstrap-reboot.css" />
     <link rel="stylesheet" href="frontend/css/style.css" />
@@ -332,11 +332,72 @@
       </div>
     </section>
     <!-- GALERY -->
+    <footer class="section-footer mt-5 mb-4 border-top">
+      <div class="container pt-5 pb-5">
+        <div class="row justify-content-center">
+          <div class="col-12">
+            <div class="row">
+              <div class="col-12 col-lg-3">
+                <h5>FEATURES</h5>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href=" "> Hukum</a>
+                  </li>
+                  <li>
+                    <a href=" ">Travel</a>
+                  </li>
+                  <li>
+                    <a href=" ">Property</a>
+                  </li>
+                  <li>
+                    <a href=" ">Komveksi</a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="col-12 col-lg-3">
+                <h5>GET CONNECTED</h5>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href=" ">Ciputat Timur</a>
+                  </li>
+                  <li>
+                    <a href=" ">Tangerang Selatan</a>
+                  </li>
+                  <li>
+                    <a href=" ">0851-5758-xxxx</a>
+                  </li>
+                  <li>
+                    <a href=" ">darmawan@gmail.com</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-12 col-lg-6">
+                <h5>LOCATION</h5>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6887123064917!2d106.75158631431097!3d-6.304567863454402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ef103911afdd%3A0xaa8cbd97d3e66313!2sHANASTI%20%26%20REKAN!5e0!3m2!1sid!2sid!4v1594569142660!5m2!1sid!2sid "
+                  frameborder="0 "
+                  style="border: 0; width: 100%; height: 100px"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid pt-4 pb-1 border-top">
+        <div class="row justify-content-center">
+          <div class="col-auto text-gray-500 font-weight-light">
+            2021 Copyright Project • All rights reserved • Made in Jakarta
+          </div>
+        </div>
+      </div>
+    </footer>
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-    <!-- <script src="frontend/js/jquery-3.5.1.slim.min.js"></script> -->
-    <script src="frontend/js/jquery.min.js"></script>
-    <script src="frontend/js/popper.min.js"></script>
+    <script src="frontend/js/jquery-3.3.1.min.js"></script>
+    <!-- <script src="frontend/js/jquery.min.js"></script> -->
+    <!-- <script src="frontend/js/popper.min.js"></script> -->
     <script src="frontend/js/bootstrap.js"></script>
     <script src="frontend/js/main.js"></script>
     <script src="frontend/vendor/owl/owl.carousel.min.js"></script>
@@ -364,6 +425,39 @@
           },
         },
       });
+
+      function handleGoTop() {
+        var offset = 200;
+        var duration = 500;
+        if (navigator.userAgent.match(/iPhone|iPad|iPod/i)) {
+          $(window).bind("touchend touchcancel touchleave", function (e) {
+            if ($(this).scrollTop() > offset) {
+              $(".back-to-top").fadeIn(duration);
+            } else {
+              $(".back-to-top").fadeOut(duration);
+            }
+          });
+        } else {
+          $(window).scroll(function () {
+            if ($(this).scrollTop() > offset) {
+              $(".back-to-top").fadeIn(duration);
+            } else {
+              $(".back-to-top").fadeOut(duration);
+            }
+          });
+        }
+        $(".back-to-top").click(function (e) {
+          e.preventDefault();
+          $("html, body").animate(
+            {
+              scrollTop: 0,
+            },
+            duration
+          );
+          return false;
+        });
+      }
+      handleGoTop();
     </script>
   </body>
 </html>
