--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="frontend/css/bootstrap-reboot.css" />
     <link rel="stylesheet" href="frontend/css/style.css" />
     <link href="frontend/vendor/icofont/icofont.min.css" rel="stylesheet" />
+    <link href="frontend/vendor/venobox/venobox.css" rel="stylesheet" />
     <link rel="stylesheet" href="frontend/css/responsive.css" />
   </head>
   <body>
@@ -274,7 +275,14 @@
                 <div
                   class="news-image"
                   style="background-image: url('/frontend/images/image1.jpg')"
-                ></div>
+                >
+                  <a
+                    href="/frontend/images/image1.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  >
+                  </a>
+                </div>
               </div>
             </div>
           </div>
@@ -284,7 +292,13 @@
                 <div
                   class="news-image"
                   style="background-image: url('/frontend/images/image2.jpg')"
-                ></div>
+                >
+                  <a
+                    href="/frontend/images/image2.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -294,7 +308,13 @@
                 <div
                   class="news-image"
                   style="background-image: url('/frontend/images/image3.jpg')"
-                ></div>
+                >
+                  <a
+                    href="/frontend/images/image3.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -304,7 +324,13 @@
                 <div
                   class="news-image"
                   style="background-image: url('/frontend/images/image4.jpg')"
-                ></div>
+                >
+                  <a
+                    href="/frontend/images/image4.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -314,7 +340,13 @@
                 <div
                   class="news-image"
                   style="background-image: url('/frontend/images/image5.jpg')"
-                ></div>
+                >
+                  <a
+                    href="/frontend/images/image5.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
@@ -324,13 +356,20 @@
                 <div
                   class="news-image"
                   style="background-image: url('/frontend/images/image4.jpg')"
-                ></div>
+                >
+                  <a
+                    href="/frontend/images/image4.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <!-- GALERY -->
     <footer class="section-footer mt-5 mb-4 border-top">
       <div class="container pt-5 pb-5">
@@ -400,6 +439,7 @@
     <!-- <script src="frontend/js/popper.min.js"></script> -->
     <script src="frontend/js/bootstrap.js"></script>
     <script src="frontend/js/main.js"></script>
+    <script src="frontend/vendor/venobox/venobox.min.js"></script>
     <script src="frontend/vendor/owl/owl.carousel.min.js"></script>
     <script type="text/javascript">
       $(".owl-carousel").owlCarousel({
