ubdet news dn glery

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <div class="owl-carousel">
+            <div id="link" class="owl-carousel">
               <div class="figure-img">
                 <img
                   src="/frontend/images/image1.jpg"
@@ -221,38 +221,164 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12">
-            <div class="owl-carousel">
-              <div class="figure-img">
-                <img
-                  src="/frontend/images/image1.jpg"
-                  class="figure-img img-fluid"
-                />
+          <div class="col-lg-12">
+            <div id="news-slider" class="owl-carousel">
+              <div class="news-grid">
+                <div class="news-grid-image">
+                  <img src="/frontend/images/image3.jpg" />
+                  <div class="news-grid-box">
+                    <h1>19</h1>
+                    <p>Sep</p>
+                  </div>
+                </div>
+                <div class="news-grid-txt">
+                  <span>Finacne</span>
+                  <h2>Heading Will Be Here</h2>
+                  <ul>
+                    <li>
+                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
+                      2020
+                    </li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                  </ul>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                  <a href="#">Read More...</a>
+                </div>
+              </div>
+              <div class="news-grid">
+                <div class="news-grid-image">
+                  <img src="/frontend/images/image2.jpg" />
+                  <div class="news-grid-box">
+                    <h1>19</h1>
+                    <p>Sep</p>
+                  </div>
+                </div>
+                <div class="news-grid-txt">
+                  <span>Finacne</span>
+                  <h2>Heading Will Be Here</h2>
+                  <ul>
+                    <li>
+                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
+                      2020
+                    </li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                  </ul>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                  <a href="#">Read More...</a>
+                </div>
               </div>
 
-              <div class="figure-img">
-                <img
-                  src="/frontend/images/image2.jpg"
-                  class="figure-img img-fluid"
-                />
+              <div class="news-grid">
+                <div class="news-grid-image">
+                  <img src="/frontend/images/image3.jpg" />
+                  <div class="news-grid-box">
+                    <h1>19</h1>
+                    <p>Sep</p>
+                  </div>
+                </div>
+                <div class="news-grid-txt">
+                  <span>Finacne</span>
+                  <h2>Heading Will Be Here</h2>
+                  <ul>
+                    <li>
+                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
+                      2020
+                    </li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                  </ul>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                  <a href="#">Read More...</a>
+                </div>
               </div>
-              <div class="figure-img">
-                <img
-                  src="/frontend/images/image3.jpg"
-                  class="figure-img img-fluid"
-                />
+              <div class="news-grid">
+                <div class="news-grid-image">
+                  <img src="/frontend/images/image5.jpg" />
+                  <div class="news-grid-box">
+                    <h1>19</h1>
+                    <p>Sep</p>
+                  </div>
+                </div>
+                <div class="news-grid-txt">
+                  <span>Finacne</span>
+                  <h2>Heading Will Be Here</h2>
+                  <ul>
+                    <li>
+                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
+                      2020
+                    </li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                  </ul>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                  <a href="#">Read More...</a>
+                </div>
               </div>
-              <div class="figure-img">
-                <img
-                  src="/frontend/images/image4.jpg"
-                  class="figure-img img-fluid"
-                />
+              <div class="news-grid">
+                <div class="news-grid-image">
+                  <img src="/frontend/images/image4.jpg" />
+                  <div class="news-grid-box">
+                    <h1>19</h1>
+                    <p>Sep</p>
+                  </div>
+                </div>
+                <div class="news-grid-txt">
+                  <span>Finacne</span>
+                  <h2>Heading Will Be Here</h2>
+                  <ul>
+                    <li>
+                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
+                      2020
+                    </li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                  </ul>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                  <a href="#">Read More...</a>
+                </div>
               </div>
-              <div class="figure-img">
-                <img
-                  src="/frontend/images/image5.jpg"
-                  class="figure-img img-fluid"
-                />
+              <div class="news-grid">
+                <div class="news-grid-image">
+                  <img src="/frontend/images/image5.jpg" />
+                  <div class="news-grid-box">
+                    <h1>19</h1>
+                    <p>Sep</p>
+                  </div>
+                </div>
+                <div class="news-grid-txt">
+                  <span>Finacne</span>
+                  <h2>Heading Will Be Here</h2>
+                  <ul>
+                    <li>
+                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
+                      2020
+                    </li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                  </ul>
+                  <p>
+                    Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
+                    Consequuntur aspernatur reprehenderit velit est voluptatum,
+                    voluptas amet quasi dicta consectetur.
+                  </p>
+                  <a href="#">Read More...</a>
+                </div>
               </div>
             </div>
           </div>
@@ -442,7 +568,30 @@
     <script src="frontend/vendor/venobox/venobox.min.js"></script>
     <script src="frontend/vendor/owl/owl.carousel.min.js"></script>
     <script type="text/javascript">
-      $(".owl-carousel").owlCarousel({
+      $(document).ready(function () {
+        $("#news-slider").owlCarousel({
+          navigation: true,
+          navigationText: ["", ""],
+          autoPlay: true,
+          responsive: {
+            0: {
+              items: 1,
+            },
+            600: {
+              items: 2,
+            },
+            1000: {
+              items: 3,
+            },
+            1400: {
+              items: 4,
+            },
+          },
+        });
+      });
+    </script>
+    <script type="text/javascript">
+      $("#link").owlCarousel({
         loop: true,
         margin: 10,
         nav: false,
