--- a/index.html
+++ b/index.html
@@ -236,10 +236,12 @@
                   <h2>Heading Will Be Here</h2>
                   <ul>
                     <li>
-                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
-                      2020
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
-                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                    <li>
+                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                    </li>
                   </ul>
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -262,10 +264,12 @@
                   <h2>Heading Will Be Here</h2>
                   <ul>
                     <li>
-                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
-                      2020
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
-                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                    <li>
+                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                    </li>
                   </ul>
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -289,10 +293,12 @@
                   <h2>Heading Will Be Here</h2>
                   <ul>
                     <li>
-                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
-                      2020
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
-                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                    <li>
+                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                    </li>
                   </ul>
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -315,10 +321,12 @@
                   <h2>Heading Will Be Here</h2>
                   <ul>
                     <li>
-                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
-                      2020
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
-                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                    <li>
+                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                    </li>
                   </ul>
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -341,10 +349,12 @@
                   <h2>Heading Will Be Here</h2>
                   <ul>
                     <li>
-                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
-                      2020
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
-                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                    <li>
+                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                    </li>
                   </ul>
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
@@ -367,10 +377,12 @@
                   <h2>Heading Will Be Here</h2>
                   <ul>
                     <li>
-                      <i class="fa fa-calendar" aria-hidden="true"></i> Sep 19,
-                      2020
+                      <i class="icofont-calendar" aria-hidden="true"></i> Sep
+                      19, 2020
                     </li>
-                    <li><i class="fa fa-user" aria-hidden="true"></i> Admin</li>
+                    <li>
+                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                    </li>
                   </ul>
                   <p>
                     Lorem, ipsum dolor sit amet consectetur, adipisicing elit.
