--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
                   <p>
@@ -268,7 +268,7 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
                   <p>
@@ -297,7 +297,7 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
                   <p>
@@ -325,7 +325,7 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
                   <p>
@@ -353,7 +353,7 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
                   <p>
@@ -381,7 +381,7 @@
                       19, 2020
                     </li>
                     <li>
-                      <i class="icofont-ui-use" aria-hidden="true"></i> Admin
+                      <i class="icofont-ui-user" aria-hidden="true"></i> Admin
                     </li>
                   </ul>
                   <p>
