--- a/index.html
+++ b/index.html
@@ -394,6 +394,13 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center">
+            <a href="berita.html" class="btn btn-primary"
+              >Selengkapnya <i class="icofont-arrow-right"></i
+            ></a>
+          </div>
+        </div>
       </div>
     </section>
     <!-- NEWS -->
@@ -405,7 +412,7 @@
             <h5>GALERY</h5>
           </div>
         </div>
-        <div class="row">
+        <div class="row row-galery">
           <div class="col-lg-3 col-md-6 col-sm-2">
             <div class="component-news d-block">
               <div class="news-thumbnail">
@@ -419,6 +426,22 @@
                     class="venobox d-flex justify-content-center"
                   >
                   </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image5.jpg')"
+                >
+                  <a
+                    href="/frontend/images/image5.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
                 </div>
               </div>
             </div>
@@ -444,10 +467,42 @@
               <div class="news-thumbnail">
                 <div
                   class="news-image"
+                  style="background-image: url('/frontend/images/image5.jpg')"
+                >
+                  <a
+                    href="/frontend/images/image5.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
                   style="background-image: url('/frontend/images/image3.jpg')"
                 >
                   <a
                     href="/frontend/images/image3.jpg"
+                    data-gall="Gallery"
+                    class="venobox d-flex justify-content-center"
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-2">
+            <div class="component-news d-block">
+              <div class="news-thumbnail">
+                <div
+                  class="news-image"
+                  style="background-image: url('/frontend/images/image4.jpg')"
+                >
+                  <a
+                    href="/frontend/images/image4.jpg"
                     data-gall="Gallery"
                     class="venobox d-flex justify-content-center"
                   ></a>
@@ -503,6 +558,13 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row pt-5">
+        <div class="col-12 d-flex justify-content-center">
+          <a href="galery.html" class="btn btn-primary"
+            >Selengkapnya <i class="icofont-arrow-right"></i
+          ></a>
         </div>
       </div>
     </section>
