--- a/sejarah.html
+++ b/sejarah.html
@@ -89,7 +89,7 @@
 
     <!-- navbar -->
 
-    <section class="section-sejarah mt-5">
+    <section class="section-sejarah">
       <div class="container">
         <div class="row">
           <div class="col-12">
